src/lib/tui/snapshots/towl__tui__render__tests__snapshot_browse_empty.snap
---
source: src/lib/tui/render.rs
expression: output
---
┌ Todo Owl ────────────────────────────────────────────────────────────────────┐
│ tOwl | 0/0 TODOs shown | 0 selected                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 Filter: All | Sort: File (asc)
┌ TODOs ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 j/k:nav  space:toggle  a:all  n:none  f:filter  s:sort  r:reverse  p:peek  ente
