src/lib/tui/snapshots/towl__tui__render__tests__snapshot_confirm_popup.snap
---
source: src/lib/tui/render.rs
expression: output
---
┌ Todo Owl ────────────────────────────────────────────────────────────────────┐
│ tOwl | 3/3 TODOs shown | 1 selected                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 Filter: All | Sort: File (asc)
┌ TODOs ───────────────────────────────────────────────────────────────────────▲
│ [x] - [TODO] main.rs:10 - implement error handling                           █
│ [ ] - [FIXME] lib.rs:25 - fix memory leak                                    █
│ [ ] - [BUG] integr┌ Confirm ─────────────────────────────┐                   █
│                   │ Create GitHub issues for selected TOD│                   █
│                   │ y/enter = yes, n/esc = no            │                   █
│                   │                                      │                   █
│                   └──────────────────────────────────────┘                   █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              ║
└──────────────────────────────────────────────────────────────────────────────▼
 y/enter:yes  n/esc:no
