src/lib/tui/snapshots/towl__tui__render__tests__snapshot_creating_popup.snap
---
source: src/lib/tui/render.rs
expression: output
---
┌ Todo Owl ────────────────────────────────────────────────────────────────────┐
│ tOwl | 3/3 TODOs shown | 0 selected                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 Filter: All | Sort: File (asc)
┌ TODOs ───────────────────────────────────────────────────────────────────────▲
│ [ ] - [TODO] main.rs:10 - implement error handling                           █
│ [ ] - [FIX┌ Creating Issues ─────────────────────────────────────┐           █
│ [ ] - [BUG│ Creating issues...                                   │           █
│           │ Progress: 2/5                                        │           █
│           │ Errors: 0                                            │           █
│           │                                                      │           █
│           │                                                      │           █
│           └──────────────────────────────────────────────────────┘           █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              ║
└──────────────────────────────────────────────────────────────────────────────▼
 Creating issues...
