src/lib/tui/snapshots/towl__tui__render__tests__snapshot_done_success.snap
---
source: src/lib/tui/render.rs
expression: output
---
┌ Todo Owl ────────────────────────────────────────────────────────────────────┐
│ tOwl | 3/3 TODOs shown | 0 selected                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 Filter: All | Sort: File (asc)
┌ TODOs ───────────────────────────────────────────────────────────────────────▲
│ [ ] [TODO] main.rs:10 - implement error handling                             █
│ [ ] [FIXME┌ Done ────────────────────────────────────────────────┐           █
│ [ ] [BUG] │ Created: 2 issues                                    │           █
│           │ Errors: 0                                            │           █
│           │                                                      │           █
│           │ Press q or enter to exit                             │           █
│           │                                                      │           █
│           └──────────────────────────────────────────────────────┘           █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              ║
└──────────────────────────────────────────────────────────────────────────────▼
 q/enter:quit
