src/lib/tui/snapshots/towl__tui__render__tests__snapshot_done_with_errors.snap
---
source: src/lib/tui/render.rs
expression: output
---
┌ Todo Owl ────────────────────────────────────────────────────────────────────┐
│ tOwl | 3/3 TODOs shown | 0 selected                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 Filter: All | Sort: File (asc)
┌ TODOs ───────────────────────────────────────────────────────────────────────▲
│ [ ] - [TODO] main.rs:10 - implement error handling                           █
│ [ ] - [FIX┌ Done ────────────────────────────────────────────────┐           █
│ [ ] - [BUG│ Created: 1 issues                                    │           █
│           │ Errors: 1                                            │           █
│           │   Failed to create issue: rate limited               │           █
│           │                                                      │           █
│           │ Press q or enter to exit                             │           █
│           └──────────────────────────────────────────────────────┘           █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              ║
└──────────────────────────────────────────────────────────────────────────────▼
 q/enter:quit
