src/lib/tui/snapshots/towl__tui__render__tests__snapshot_peek_popup.snap
---
source: src/lib/tui/render.rs
expression: output
---
┌ Todo Owl ────────────────────────────────────────────────────────────────────┐
│ tOwl | 3/3 TODOs shown | 0 selected                                          │
└─────┌ src/main.rs L10 ─────────────────────────────────────────────────▲─────┘
 Filte│   0 Could not read file: No such file or directory (os error 2)  █
┌ TODO│                                                                  █─────▲
│ [ ] │                                                                  █     █
│ [ ] │                                                                  █     █
│ [ ] │                                                                  █     █
│     │                                                                  █     █
│     │                                                                  █     █
│     │                                                                  █     █
│     │                                                                  █     █
│     │                                                                  █     █
│     │                                                                  █     █
│     │                                                                  █     █
│     │                                                                  █     █
│     │                                                                  █     ║
└─────└──────────────────────────────────────────────────────────────────▼─────▼
 j/k:scroll  p/esc:close
